(feat) add /numbers endpoint
