# static/openapi.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 
 info:
   title: rnd.is
-  version: 0.1.0
+  version: 0.2.0
   description: An API to generate random values.
   license:
     name: MIT License
@@ -57,46 +57,99 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/responses/ApiResponse'
+                required:
+                  - apiVersion
+                  - data
+                type: object
+                properties:
+                  apiVersion:
+                    type: string
+                    example: '0.1.0'
+                  params:
+                    type: object
+                    example:
+                      min: 1
+                      max: 10
+                  data:
+                    type: object
+                    properties:
+                      kind:
+                        type: string
+                        example: 'number'
+                      value:
+                        type: number
+                        example: '5'
         '400':
           description: Bad request.
           content:
             application/json:
               schema:
                 type: object
-        '500':
-          description: Internal server error.
+  /numbers:
+    get:
+      summary: Resolves a set of random numbers
+      parameters:
+        - name: min
+          description: The lower bound of the expected random number.
+          example: '1'
+          schema:
+            format: number
+            pattern: ^\d+$
+            type: number
+          in: query
+          required: true
+        - name: max
+          description: The upper bound of the expected random number.
+          example: '10'
+          schema:
+            format: number
+            pattern: ^\d+$
+            type: number
+          in: query
+          required: true
+        - name: length
+          description: The number of random numbers to resolve.
+          example: '3'
+          schema:
+            format: number
+            pattern: ^\d+$
+            type: number
+          in: query
+          required: true
+      responses:
+        '200':
+          description: A array of random numbers between min and max.
+          content:
+            application/json:
+              schema:
+                required:
+                  - apiVersion
+                  - data
+                type: object
+                properties:
+                  apiVersion:
+                    type: string
+                    example: '0.1.0'
+                  params:
+                    type: object
+                    example:
+                      min: 1
+                      max: 10
+                  data:
+                    type: object
+                    properties:
+                      kind:
+                        type: string
+                        example: 'number'
+                      value:
+                        type: array
+                        example: '[10, 2, 3]'
+                        items:
+                          type: number
+                          example: '5'
+        '400':
+          description: Bad request.
           content:
             application/json:
               schema:
                 type: object
-
-components:
-  responses:
-    ApiResponse:
-      description: A response from the API.
-      content:
-        application/json:
-          schema:
-            required:
-              - apiVersion
-              - data
-            type: object
-            properties:
-              apiVersion:
-                type: string
-                example: '0.1.0'
-              params:
-                type: object
-                example:
-                  min: 1
-                  max: 10
-              data:
-                type: object
-                properties:
-                  kind:
-                    type: string
-                    example: 'number'
-                  value:
-                    type: number
-                    example: '5'
